--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Python
 __pycache__/
 *.py[cod]
@@ -55,7 +54,7 @@ pip-delete-this-directory.txt
 */migrations/*.pyo
 */migrations/*.pyd
 */migrations/__pycache__/
-
+*.pyc
 # Others
 *.swp
 *.swo
@@ -68,6 +67,5 @@ mysql_conn.py
 
 venv
 db.sqlite3
-resources
-exam_papers
+resources/*
 *.pyc
